# starlite-oidc

./: .flake8  .pre-commit-config.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
starlite_oidc/: __init__.py  auth_response_handler.py  config.py  facade.py  handlers.py  message_factory.py  middleware.py  oidc.py  parse_fragment.html  plugin.py  provider_configuration.py  pyoidc_facade.py  session.py  types.py  user_session.py
starlite_oidc/factory/: cache_factory.py
tests/: conftest.py  constants.py  custom_types.py  test_auth_response_handler.py  test_middleware.py  test_oidc.py  test_provider_configuration.py  test_pyoidc_facade.py  test_user_session.py  util.py
